--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^10.13.2",
     "framer-motion": "^11.11.1",
     "moment": "^2.30.1",
+    "next": "^14.2.14",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
